added blog post to about pane

--- a/index.html
+++ b/index.html
@@ -421,6 +421,8 @@
                         as they
                         become one or two urls that can reasonably be shared, on the other hand larger files can be a
                         problem...
+
+                        <a href="https://thoughts.willcipriano.com/podjeli-a-new-way-to-share-files/">Check out my blog post about it!</a>
                     </div>
                     <hr>
                     <div id="aboutSignOff"></div>
